--- a/website/components/navbar/Navbar.module.scss
+++ b/website/components/navbar/Navbar.module.scss
@@ -6,13 +6,30 @@
     justify-content: space-between;
     align-items: center;
 
+    .userPreview {
+      border-radius: 50%;
+      cursor: pointer;
+      box-shadow: 0 0 5px 1px grey;
+      transition: box-shadow 150ms;
+
+      &:hover {
+        box-shadow: 0 0 0 0;
+      }
+
+      .userImg {
+        border-radius: 50%;
+        width: 38px;
+      }
+    }
+
     ul {
       display: flex;
       list-style: none;
       align-items: center;
 
       li {
-        
+        display: flex;
+        align-items: center;
         margin-left: 20px;
 
         a {
@@ -21,6 +38,40 @@
           &:hover {
             opacity: 0.6;
           }
+        }
+      }
+    }
+  }
+
+  .userMenu {
+    position: absolute;
+    right: 22px;
+    top: 70px;
+    box-shadow: 0 0 5px 1px grey;
+    border-radius: 4px;
+    background-color: white;
+    z-index: 5;
+
+    ul {
+      list-style: none;
+
+      li{
+        cursor: pointer;
+        padding: 8px;
+        transition: background-color 150ms;
+
+        &:hover {
+          background-color: #f0f0f0;
+        }
+
+        &:first-of-type {
+          border-top-left-radius: 4px;
+          border-top-right-radius: 4px;
+        }
+
+        &:last-of-type {
+          border-bottom-left-radius: 4px;
+          border-bottom-right-radius: 4px;
         }
       }
     }
