--- a/website/styles/globals.scss
+++ b/website/styles/globals.scss
@@ -21,9 +21,11 @@ a {
   width: 100%;
   margin: 0 auto;
   padding: 10px 20px;
+  position: relative;
 }
 
 main {
   height: calc(100vh - 63px);
   overflow-y: auto;
+  z-index: 1;
 }
